se agrega al proyecto ultimos detalles

--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -11,3 +11,11 @@
     background-size: cover;
     padding: 30%;
 }
+
+.color{
+    color: #784195;
+}
+
+.fondo{
+    background-color: #784195;
+}
